<resources>
    <string name="app_name">Belapp</string>
    <string name="title_activity_login">Entrar</string>
    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_atualizar_perfil">Erro ao atualizar perfil</string>
    <string name="error_nome_nao_pode_ser_vazio">Campo nome não pode ser deixado em branco!</string>
    <string name="error_email_nao_pode_ser_vazio">Campo e-mail não pode ser deixado em branco!</string>
    <string name="error_telefone_nao_pode_ser_vazio">Campo telefone não pode ser deixado em branco!</string>
    <string name="error_telefone_invalido">O telefone informado não é válido!</string>
    <string name="error_email_invalido">O e-mail informado não é válido!</string>
    <string name="error_email_ja_utilizado">O e-mail informado está vinculado a outra conta!</string>
    <string name="error_senha_atual_vazia">A senha atual deve ser informada</string>
    <string name="error_nova_senha_vazia">A nova senha deve ser informada</string>
    <string name="error_confirmacao_nova_senha_vazia">A confirmação da nova senha deve ser informada</string>
    <string name="error_alteracao_nao_realizada">A alteração não pode ser realizada</string>
    <string name="error_autenticacao_falhou">A autenticação falhou</string>
    <string name="error_nova_senha_confirmacao_diferem">A nova senha e sua confirmação devem ser iguais</string>
    <string name="error_nova_senha_deve_ter_6_ou_mais_caracteres">A nova senha deverá ter 6 ou mais caracteres</string>
    <string name="error_selecione_uma_data">Selecione uma data</string>
    <string name="error_selecione_um_horario">Selecione um horário para o agendamento</string>
    <string name="error_nao_ha_horario_disponivel_para_data">Não há horários disponíveis para a data selecionada</string>
    <string name="error_estabelecimento_fechado_na_data">O estabelecimento estará fechado na data selecionada</string>
    <string name="error_confirmacao_senha">As senhas não correspondem</string>
    <string name="error_confirmacao_email">Os emails não correspondem</string>
    <string name="error_nao_ha_resultados">Não há resultados para os filtros selecionados.</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Belapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cliente_logado">ClienteLogadoActivity</string>
    <string name="app_slongan">Sua beleza no melhor lugar</string>
    <string name="app_site">belapp.com.br</string>
    <string name="sucess_cadastro">Cadastro realizado com sucesso!</string>
    <string name="sucess_login_efetuado">Login efetuado com sucesso!</string>
    <string name="error_cadastro">Erro na autenticação!</string>
    <string name="error_login_invalido">Senha errada ou email invalido!</string>

    <string name="tv_ou">OU</string>
    <string name="tv_formulario">Preencha o Formulário</string>
    <string name="button_cadastrar">Cadastrar</string>
    <string name="et_nome">Nome</string>
    <string name="et_email">Email</string>
    <string name="et_confirmacao_email">Confirmação de Email</string>
    <string name="et_telefone">Telefone</string>
    <string name="et_senha">Senha</string>
    <string name="et_confirmacao_senha">Confirmação de Senha</string>
    <string name="erro_teefone">telefone não pode ficar em branco</string>
    <string name="erro_Email">Email não pode ficar em branco</string>
    <string name="erro_Nome">Nome não pode ficar em branco</string>
    <string name="erro_Senha">Senha não pode ficar em branco</string>

    <!-- Facebook-->
    <string name="facebook_app_id">190569431853174</string>
    <string name="fb_login_protocol_scheme">fb190569431853174</string>




    <string name="title_activity_salao">Salão</string>


    <string name="title_activity_perfil">Meu Perfil</string>
    <string name="title_activity_estabelecimentos">Estabelecimentos</string>,
    <string name="title_activity_favoritos">Favoritos</string>,
    <string name="title_activity_Pesquisar">Pesquisar</string>
    <string name="title_activity_promocoes">Promoções</string>
    <string name="title_activity_avaliacoes">Avaliações</string>
    <string name="title_activity_avaliar">Avaliar</string>

    <string name="title_activity_agendar_servico">Agendar Serviço</string>
    <string name="title_activity_profissionais">Profissionais</string>
    <string name="title_activity_minha_agenda">Minha Agenda</string>
    <string name="title_activity_agendamento">Agendamento</string>

    <string name="app_nome">Nome</string>
    <string name="app_telefone">Telefone</string>
    <string name="app_senha">Senha</string>
    <string name="app_salvar">Salvar</string>

    <string name="info_exemplo_email">exemplo@exemplo.com</string>
    <string name="info_exemplo_nome">Meu nome</string>
    <string name="info_exemplo_telefone">(87) 996623985</string>
    <string name="app_alterar_senha">Alterar senha</string>
    <string name="app_agendar">Agendar</string>
    <string name="app_dias_funcionamento">Dias de Funcionamento</string>

    <string name="sucess_alteracao_realizada">Alteração realizada com sucesso!</string>
    <string name="sucess_agendamento_realizado">Agendamento realizado com sucesso!</string>
    <string name="sucess_agendamento_cancelado">Agendamento cancelado com sucesso!</string>
    <string name="info_agendamento_nao_cancelado">Agendamento não cancelado</string>
    <string name="title_activity_alterar_senha">Alterar Senha</string>
    <string name="app_senha_atual">Senha Atual</string>
    <string name="app_nova_senha">Nova Senha</string>
    <string name="app_confirmacao_nova_senha">Confirmação Nova Senha</string>
    <string name="app_salvar_alteracao_senha">Salvar alteração de senha</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resultados">Resultados</string>
    <string name="digite_algum_dado">Digite algum dado</string>
    <string name="servicos">Serviços</string>

    <string name="tv_informacao_avaliacao">Não há avaliações</string>

    <string name="title_activity_reset">ResetActivity</string>
    <string name="falha_recuperar_senha_invalido">Falhou! Tente novamente.</string>
    <string name="recuperar_senha_iniciada">Recuperação iniciada. Email enviado.</string>
    <string name="recuperar_digite_email">Digite um email!</string>
    <string name="app_cancelar">Cancelar</string>
    <string name="app_sim">Sim</string>
    <string name="app_nao">Não</string>
    <string name="app_selecionar_data">Selecionar Data:</string>
    <string name="app_selecionar_horario">Selecionar Horário:</string>
    <string name="app_selecionar">Selecionar</string>
    <string name="app_confirmacao">Confirmação</string>
    <string name="app_pergunta_confirmacao_cancelamento_agendamento">Confirma a intenção de cancelar o agendamento?</string>
    <string name="app_filtros">Filtros</string>

    <string name="adicionando_favorito">adicionado aos favoritos</string>
    <string name="retirando_favoritoo">Retirado dos faforitos</string>
    <string name="app_reagendar">Reagendar</string>
    <string name="app_alterar_servico">Alterar Serviço</string>
    <string name="app_desistir">Desistir</string>

</resources>

