<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".view.CadastroBasicoActivity">

    <EditText
        android:id="@+id/etNomeCadastro"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="Nome"
        android:inputType="textPersonName"
        android:textSize="@dimen/tv_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFormulário" />

    <EditText
        android:id="@+id/etEmailCadastro"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/tv_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeCadastro" />

    <EditText
        android:id="@+id/etTelefoneCadastro"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Telefone"
        android:inputType="phone"
        android:textSize="@dimen/tv_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailCadastro" />

    <EditText
        android:id="@+id/etSenhaCadastro"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Senha"
        android:inputType="textPassword"
        android:textSize="@dimen/tv_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTelefoneCadastro" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        android:text="@string/button_cadastrar"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/tv_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSenhaCadastro" />

    <ImageView
        android:id="@+id/ivConectarFacebook"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/etNomeCadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/conectar_face" />

    <ImageView
        android:id="@+id/ivConectarGoogle"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivConectarFacebook"
        app:srcCompat="@drawable/conectar_google" />

    <View
        android:id="@+id/divider"
        android:layout_width="160dp"
        android:layout_height="2dp"
        android:layout_marginTop="35dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivConectarGoogle" />

    <View
        android:id="@+id/divider2"
        android:layout_width="160dp"
        android:layout_height="2dp"
        android:layout_marginTop="35dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivConectarGoogle" />

    <TextView
        android:id="@+id/tvOU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="10dp"
        android:text="OU"
        android:textSize="@dimen/tv_cadastro"
        app:layout_constraintEnd_toStartOf="@+id/divider2"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/ivConectarGoogle"
        tools:text="@string/tv_ou" />

    <TextView
        android:id="@+id/tvFormulário"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:text="Preencha o Formulário"
        android:textSize="@dimen/tv_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOU"
        tools:text="@string/tv_formulario" />

</android.support.constraint.ConstraintLayout>